When account does not have ticket statuses enabled, don't group by status in tickets list.
Ticket: FF-498.

--- a/src/views/partials/ticket-list-item.ejs
+++ b/src/views/partials/ticket-list-item.ejs
@@ -1,4 +1,4 @@
-<a href="/tickets/<%= ticket.id %>" class="ticket-list-item">
+<a href="/tickets/<%= ticket.friendlyId %>" class="ticket-list-item">
     <div class="left-view">
         <p class="fault-category"><%= ticket.faultCategory.name %></p>
 
