Support displaying ticket update that has a form attached.

--- a/src/public/css/elements/icon-colors.less
+++ b/src/public/css/elements/icon-colors.less
@@ -31,7 +31,8 @@
 .ff-ticket-assigned-circled,
 .ff-due-date-time-circled,
 .ff-priority-circled,
-.ff-building-circled {
+.ff-building-circled,
+.ff-form-circled {
     color: #11BF96;
 }
 .ff-ticket-unassigned-circled {
