Replace some uses of 'fault' with the more generic 'issue'.

--- a/src/views/account-tickets.ejs
+++ b/src/views/account-tickets.ejs
@@ -14,7 +14,7 @@
     <%-
     include('partials/ticket-list', {
         tickets,
-        showNoTicketsMessage: 'No faults have been reported yet for ' + account.name + '.',
+        showNoTicketsMessage: 'No issues have been reported yet for ' + account.name + '.',
     })
     %>
 </div>
