--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -28,7 +28,7 @@
 
                 <%- include('partials/enter-code') %>
             <% } else if (website.homeConfiguration === 'REPORT_AGAINST_ACCOUNT') { %>
-                <a href="/report?againstAccount=1" class="button">Report Fault</a>
+                <a href="/report?againstAccount=1" class="button">Report Issue</a>
             <% } %>
         <% } else if (!isLoggedIn) { %>
             <a href="/log-in" class="button">Log In</a>
