--- a/src/views/location.ejs
+++ b/src/views/location.ejs
@@ -10,10 +10,10 @@
 
         <h3><%= location.name %></h3>
 
-        <a href="/report?location=<%= location.id %>" class="button">Report Fault</a>
+        <a href="/report?location=<%= location.id %>" class="button">Report Issue</a>
     </div>
 
-    <%- include('partials/ticket-list', {tickets, showNoTicketsMessage: 'No faults have been reported here yet.'}) %>
+    <%- include('partials/ticket-list', {tickets, showNoTicketsMessage: 'No issues have been reported here yet.'}) %>
 </div>
 
 <%- include('partials/copyright-footer') %>
