--- a/src/views/report.ejs
+++ b/src/views/report.ejs
@@ -46,13 +46,13 @@
         <% } %>
 
         <div class="fieldset bordered-box">
-            <h3>Fault Description</h3>
+            <h3>Description</h3>
 
-            <textarea name="description" placeholder="Enter details of the fault..."></textarea>
+            <textarea name="description" placeholder="Enter details of the ticket..."></textarea>
         </div>
 
         <div class="fieldset bordered-box">
-            <h3>Fault Category</h3>
+            <h3>Category</h3>
 
             <select name="faultCategoryId">
                 <option value="">Choose a category...</option>
