--- a/src/views/my-tickets.ejs
+++ b/src/views/my-tickets.ejs
@@ -3,7 +3,7 @@
 <%- include('partials/page-header', {title: 'My Tickets'}) %>
 
 <div class="page-content" id="my-tickets-page">
-    <%- include('partials/ticket-list', {tickets, showNoTicketsMessage: 'You haven\'t reported any faults yet.'}) %>
+    <%- include('partials/ticket-list', {tickets, showNoTicketsMessage: 'You haven\'t reported any issues yet.'}) %>
 </div>
 
 <%- include('partials/copyright-footer') %>
