Add support for new ticket update type: waste recorded.

--- a/src/public/css/elements/icon-colors.less
+++ b/src/public/css/elements/icon-colors.less
@@ -28,6 +28,7 @@
 .ff-check-in-out-circled,
 .ff-expense-circled,
 .ff-mileage-circled,
+.ff-waste-circled,
 .ff-ticket-assigned-circled,
 .ff-due-date-time-circled,
 .ff-priority-circled,
