--- a/src/public/css/pages/ticket.less
+++ b/src/public/css/pages/ticket.less
@@ -49,6 +49,10 @@
                 margin-bottom: 0;
             }
 
+            p:last-of-type {
+                margin-bottom: 0;
+            }
+
             i {
                 font-style: italic;
             }
