Update year in footer to always be current year.

--- a/src/views/partials/copyright-footer.ejs
+++ b/src/views/partials/copyright-footer.ejs
@@ -1,6 +1,8 @@
         <footer class="copyright-footer">
             <div class="container">
-                &copy; 2018 &bullet; Powered by <a href="https://faultfixers.com/">FaultFixers</a>
+                &copy; <%= getCurrentYear() %>
+                &bullet;
+                Powered by <a href="https://faultfixers.com/">FaultFixers</a>
             </div>
         </footer>
 
