Change 'upload' input to a styled button, and show a preview of the chosen image.

--- a/src/public/css/pages/report.less
+++ b/src/public/css/pages/report.less
@@ -36,6 +36,21 @@
             margin: 0 auto;
         }
     }
+
+    #report-image {
+        margin-bottom: 0;
+        margin-right: 0;
+    }
+    #report-image-hidden-input {
+        visibility: hidden;
+    }
+    #report-image-preview {
+        img {
+            margin-top: 15px;
+            max-width: 100%;
+            max-height: 300px;
+        }
+    }
 }
 
 #report-success-modal {
