Reduce use of words 'fault' and 'repair'.

--- a/src/views/report.ejs
+++ b/src/views/report.ejs
@@ -98,7 +98,7 @@
     <i class="ff-icon ff-tick"></i>
 
     <div id="report-success-modal-text">
-        <p>The fault has been logged.</p>
+        <p>The issue has been logged.</p>
         <p>We'll keep you updated!</p>
     </div>
 </div>
