--- a/src/views/ticket.ejs
+++ b/src/views/ticket.ejs
@@ -102,7 +102,7 @@
 
                     <form id="add-comment-form-inputs">
                         <label for="add-comment-text-value">
-                            Comment (private between you and the repairs team):
+                            Comment (private between you and the maintenance team):
                         </label>
 
                         <textarea
