--- a/src/public/css/elements/icon-colors.less
+++ b/src/public/css/elements/icon-colors.less
@@ -33,7 +33,8 @@
 .ff-due-date-time-circled,
 .ff-priority-circled,
 .ff-building-circled,
-.ff-form-circled {
+.ff-form-circled,
+.ff-attach-circled {
     color: #11BF96;
 }
 .ff-ticket-unassigned-circled {
