Upgrade to API v9 -- fault categories renamed to ticket categories.

--- a/src/public/css/elements/ticket-list.less
+++ b/src/public/css/elements/ticket-list.less
@@ -20,7 +20,7 @@
     margin-bottom: 15px;
     background-color: white;
 
-    .fault-category {
+    .category {
         margin-bottom: 5px;
         color: black;
     }
