--- a/src/views/ticket.ejs
+++ b/src/views/ticket.ejs
@@ -10,7 +10,7 @@
 <div class="page-content" id="ticket-page">
     <div class="details-section bordered-box">
         <p>
-            <b>Category:</b> <%= faultCategory.name %>
+            <b>Category:</b> <%= category.name %>
         </p>
 
         <p>
