Support showing ticket updates where description/category has changed.

--- a/src/public/css/elements/icon-colors.less
+++ b/src/public/css/elements/icon-colors.less
@@ -33,6 +33,8 @@
 .ff-due-date-time-circled,
 .ff-priority-circled,
 .ff-building-circled,
+.ff-category-circled,
+.ff-rename-circled,
 .ff-form-circled,
 .ff-attach-circled {
     color: #11BF96;
