--- a/src/public/css/pages/ticket.less
+++ b/src/public/css/pages/ticket.less
@@ -63,6 +63,15 @@
         p:last-of-type {
             margin-bottom: 0;
         }
+
+        .description {
+            display: flex;
+            margin-bottom: 1em;
+
+            b {
+                margin-right: 6px;
+            }
+        }
     }
 
     .progress-section,
