Add quote form for Mikey Locks.

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -30,6 +30,10 @@
             <% } else if (website.homeConfiguration === 'REPORT_AGAINST_ACCOUNT') { %>
                 <a href="/report?againstAccount=1" class="button">Report Issue</a>
             <% } %>
+
+            <% if (areQuotesEnabled) { %>
+                &nbsp;&nbsp;&nbsp;<a href="/quote" class="button">Request Quote</a>
+            <% } %>
         <% } else if (!isLoggedIn) { %>
             <a href="/log-in" class="button">Log In</a>
             &nbsp;&nbsp;&nbsp;
