Allow quotes to be enabled per website.

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,7 +31,7 @@
                 <a href="/report?againstAccount=1" class="button">Report Issue</a>
             <% } %>
 
-            <% if (areQuotesEnabled) { %>
+            <% if (isRequestQuoteEnabled) { %>
                 &nbsp;&nbsp;&nbsp;<a href="/quote" class="button">Request Quote</a>
             <% } %>
         <% } else if (!isLoggedIn) { %>
