--- a/src/views/quote.ejs
+++ b/src/views/quote.ejs
@@ -19,9 +19,9 @@
         </div>
 
         <div class="fieldset bordered-box">
-            <h3>Your Company Name</h3>
+            <h3>Your Name Or Company</h3>
 
-            <input name="companyName" type="text" size="50" required />
+            <input name="userOrCompanyName" type="text" size="50" required />
         </div>
 
         <div class="fieldset bordered-box">
