Allow ticket due dates to span multiple hours and days (splits 'due date+time' into 'start+end date+time').

--- a/src/views/partials/ticket-update.ejs
+++ b/src/views/partials/ticket-update.ejs
@@ -27,10 +27,14 @@
         </div>
     <% } %>
 
-    <% if (update.hasDueDateOrTimeChanged) { %>
+    <% if (update.hasDueChanged) { %>
         <div class="update-content">
             Due:
-            <%= formatLocalDateTime(update.newDueDate, update.newDueTime) %>
+            <% if (update.isDueSet) { %>
+                <%= formatTicketUpdateNewDueRange(update) %>
+            <% } else { %>
+                -
+            <% } %>
         </div>
     <% } %>
 
