Show expense categories in ticket updates.

--- a/src/views/partials/ticket-update.ejs
+++ b/src/views/partials/ticket-update.ejs
@@ -71,6 +71,12 @@
         </div>
     <% } %>
 
+    <% if (update.expenseCategory) { %>
+        <div class="update-content">
+            Category: <%= update.expenseCategory.name %>
+        </div>
+    <% } %>
+
     <% if (update.hasInternalAction && update.internalActionValue) { %>
         <div class="update-content">
             <%- paragraphs(update.internalActionValue) %>
