Support showing ticket updates where primary relation has changed.

--- a/src/public/css/elements/icon-colors.less
+++ b/src/public/css/elements/icon-colors.less
@@ -32,7 +32,10 @@
 .ff-ticket-assigned-circled,
 .ff-due-date-time-circled,
 .ff-priority-circled,
+.ff-account-circled,
 .ff-building-circled,
+.ff-location-circled,
+.ff-asset-circled,
 .ff-category-circled,
 .ff-rename-circled,
 .ff-form-circled,
